--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <link rel="icon" type="image/png" href="/src/assets/barbaro-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbaro Nutrition | Suplementos Deportivos Premium</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Barbaro Nutrition: suplementos deportivos premium y asesoría personalizada." />
+    <meta name="author" content="Barbaro Nutrition" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Barbaro Nutrition" />
+    <meta property="og:description" content="Suplementos deportivos premium, rutinas y apoyo personalizado para tu rendimiento." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/favicon.ico" />
   </head>
 
   <body>
