Add branded social share metadata

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <meta property="og:title" content="Barbaro Nutrition" />
     <meta property="og:description" content="Suplementos deportivos premium, rutinas y apoyo personalizado para tu rendimiento." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:site_name" content="Barbaro Nutrition" />
+    <meta property="og:image" content="/og-barbaro.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:title" content="Barbaro Nutrition" />
+    <meta name="twitter:description" content="Suplementos deportivos premium, rutinas y apoyo personalizado para tu rendimiento." />
+    <meta name="twitter:image" content="/og-barbaro.png" />
   </head>
 
   <body>
