--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta property="og:description" content="Suplementos deportivos premium, rutinas y apoyo personalizado para tu rendimiento." />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Barbaro Nutrition" />
-    <meta property="og:image" content="/og-barbaro.png" />
+    <meta property="og:image" content="/og-barbaro-v2.jpg?v=1" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Barbaro Nutrition" />
     <meta name="twitter:description" content="Suplementos deportivos premium, rutinas y apoyo personalizado para tu rendimiento." />
-    <meta name="twitter:image" content="/og-barbaro.png" />
+    <meta name="twitter:image" content="/og-barbaro-v2.jpg?v=1" />
   </head>
 
   <body>
